@@ -34,6 +34,7 @@
 - fix macro usage in lookup_program.c.
 - fix gcc5 complaints.
 - remove unused offset handling code.
+- fix mount as you go offset selection.
 
 28/03/2014 autofs-5.0.9
 =======================
